test/samples/invalid/if_updated_old_inline_initializer.invalid.sol
contract Foo {
        /// #if_updated !(old(x) == 1);
        uint x = 1;
}
